syntax = "proto3";

package iap.pb;
option go_package = "iap/api;pb";

enum SYS {
  IOS = 0;
  ANDROID = 1;
}

message IAPRequest {
  string appStoreId = 1;   // app的名字
  SYS    sys = 2;          //客户端
  int32  productType = 3;  //产品类型
  string productId = 4;    //产品ID
  string productToken = 5; //Token
}

message IAPResponse {
  int32   code = 1;
  string  msg = 2;
  SYS     sys = 3;
  string  data = 4;
}